test/spec_vectors/simd_bit_shift/fail/module_38.wat
(module (func $i64x2.shl-1st-arg-empty (result v128) (i64x2.shl (i32.const 0))))